[tool.poetry]
name = "CppToPlantUML"
version = "0.1.0"
description = "A simple script that generates a PlantUML class diagram from a C++ source file."
authors = ["Maxim Fomin <fominmaxim3721@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
