[tool.poetry]
name = "CppToPlantUML"
version = "2.1.0"
description = "A simple script that generates a PlantUML class diagram from a C++ source file."
authors = ["Maxim Fomin <fominmaxim3721@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
clang = "^17.0.6"
libclang = "^18.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
